# Leontief

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  DECISIONS.md  NOTICE  README.md  SECURITY-TESTING.md  biome.json  docker-compose.yml  justfile  leontief-build-prompts.md  leontief-business-plan.md  leontief-docs-hub.md  leontief-prototype-spec.md  package.json  pnpm-lock.yaml  render.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
INTEGRATIONS/: README.md  aquarius.md  blend.md  reflector.md
app/: .env.example  README.md  index.html  package.json  vite.config.ts
app/src/: App.tsx  ctx.tsx  hooks.ts  index.css  main.tsx
app/src/components/: ConfigError.tsx  HealthGauge.tsx  LedgerPanel.tsx  Shell.tsx  TxToast.tsx
app/src/lib/: chain.ts  demoSigner.ts  env.ts  errors.ts  format.ts  sessionLog.ts  submitTx.ts  useSubmit.ts
app/src/routes/: Borrow.tsx  Demo.tsx  Issuer.tsx  Liquidate.tsx  Positions.tsx  Stats.tsx  VaultDetail.tsx  Vaults.tsx
contracts/blend-price-adapter/: Cargo.toml
contracts/blend-price-adapter/src/: constants.rs  lib.rs  test.rs
contracts/mini-pool/: Cargo.toml
contracts/mini-pool/src/: constants.rs  lib.rs  test.rs
contracts/mini-pool/tests/: prop.rs
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: constants.rs  lib.rs  test.rs
contracts/mock-oracle/test_snapshots/test/: decimals_immutable_after_init.1.json  init_twice_rejected.1.json  price_set_event_emitted.1.json  (+3 more)
contracts/oracle-adapter/: Cargo.toml
contracts/oracle-adapter/src/: constants.rs  lib.rs  test.rs
contracts/oracle-adapter/tests/: normalization_prop.rs
contracts/reflector-feed/: Cargo.toml
contracts/reflector-feed/src/: constants.rs  lib.rs  test.rs
contracts/vault/: Cargo.toml
contracts/vault-factory/: Cargo.toml
contracts/vault-factory/src/: constants.rs  lib.rs  test.rs
contracts/vault/src/: constants.rs  lib.rs  test.rs
contracts/vault/tests/: prop.proptest-regressions  prop.rs
deployments/: README.md  testnet.json
docs/: ADDRESSES.md  APP.md  DEPLOY.md  ENVIRONMENT.md  MAINNET.md  MONITORING.md  MVP_TESTNET.md  REPO.md  SECRETS.md
docs-portal/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-portal/docs/: addresses.mdx  api.mdx  architecture.mdx  demo.mdx  overview.mdx  sdk.mdx  security.mdx
docs-portal/docs/integrations/: aquarius.mdx  blend.mdx  reflector.mdx
docs-portal/docs/protocol/: mini-pool.mdx  oracle.mdx  vault.mdx
docs-portal/src/css/: custom.css
docs-site/: book.toml
docs-site/src/: SUMMARY.md  addresses.md  app.md  architecture.md  build-prompts.md  business-plan.md  contributing.md  decisions.md  deploy.md  disclosure.md  environment.md  monitoring.md  overview.md  repo.md  secrets.md  security-testing.md  spec.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pool_sequences.rs  fuzz_vault_sequences.rs
landing/: .vercelignore  Litepaper.dc.html  README.md  config.js  landing.html  performance.html  vercel.json
scripts/: create_aqua_pool.sh  demo.sh  deploy_blend_pool.sh  gen_addresses.sh  gen_app_env.sh  gen_bindings.sh  install_tools.sh  record_demo.md  setup_testnet.sh  validate_deployments.py  wire_reflector.sh
services/api/: .env.example  README.md  package.json
services/api/src/: db.ts  migrate.ts  schema.test.ts  schema.ts  server.ts
services/indexer/: README.md  package.json
services/indexer/src/: api.ts  config.ts  db.ts  index.ts  migrate.ts  poller.ts  risk.test.ts  risk.ts
services/monitor/: package.json
services/monitor/src/: monitor.ts
tests/: Cargo.toml
tests/fixtures/: golden.json  golden_gen.py
tests/src/: lib.rs
tests/test_snapshots/: workspace_links_all_contracts.1.json
tests/tests/: beats.rs  golden.rs  smoke.rs
(+20 files in other folders)
