[package]
name = "mini-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies.vault]
path = "../vault"
features = ["testutils"]

[dev-dependencies.mock-oracle]
path = "../mock-oracle"
features = ["testutils"]

[dev-dependencies.oracle-adapter]
path = "../oracle-adapter"
features = ["testutils"]

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.mini-pool]
path = "."
features = ["testutils"]
